--- a/viewer.html
+++ b/viewer.html
@@ -3,13 +3,20 @@
 
 <head>
     <meta http-equiv="Content-Type" content="text/html; charset=UTF-8" />
-    <title>Steve Mansour - Performer Lyric Viewer</title>
-    <link href="../sman.css" rel="stylesheet" type="text/css">
-    <link href="../buttons.css" rel="stylesheet" type="text/css">
-    <link rel="stylesheet" href="../fa/css/all.css">
+    <title>Gray - Lyric Viewer</title>
+    <style>
+    body {
+        height: 100%;
+        background: #000000;
+        color: white;
+        font-family: sans-serif;
+    }
+    </style>
+
     <script>
         var app = {
             device: "IAC Driver IAC Bus 2", // Create a new device in the Audio MIDI Setup app for lyrics.
+            songID: 0,                      // id of the song as identified in the midi message
             song: 0,                        // current song index
             page: 0,                        // current page (each page has 127 lines)
             line: 0,                        // lyric line within the page
@@ -88,7 +95,7 @@
                     app.songs.push(s);                  // add it to our list
                     app.song = app.songs.length - 1;    // index to this song
                     break;
-                
+
                 case "v":  // verse lyric
                 case "c":  // chorus lyric
                 case "b":  // bridge lyric
@@ -104,21 +111,22 @@
         }
 
         function onMIDISuccess(midiAccess) {
-            feedbackMessage("midiaccess","Success!");
-            // esversion: 6
+            var s = '<span style="background-color: #e0ffe0;color: #22aa22;border-color:#22aa22;border-style:solid;border-width: 2px 2px 2px 2px;">&nbsp;MIDI&nbsp;</span>';
+            feedbackMessage("midiaccess",s);
             for (var input of midiAccess.inputs.values()) {
                 input.onmidimessage = getMIDIMessage;
             }
         }
 
+        function updateSong() {
+            var song = app.songs[app.song];
+            feedbackMessage("song",''+song.name);
+
+        }
+
         function updateLyric() {
             var i = app.page * 128 + app.line;
             var song = app.songs[app.song];
-            feedbackMessage("song",''+song.name);
-            feedbackMessage("songIndex",''+app.song);
-            feedbackMessage("page",''+app.page);
-            feedbackMessage("line",''+app.line);
-            feedbackMessage("lyricIndex",''+i);
             feedbackMessage("lyric", song.lyrics[i] );
             if (i + 1 < song.lyrics.length) {
                 feedbackMessage("lyricNext", song.lyrics[i+1] );
@@ -140,10 +148,10 @@
         //  to establish a "page" number.  Lyric lines 0-127 are on page 0,
         //  lines 128-256 are on page 1, and so on.  This should provide
         //  ample space for lyrics of any song we do.
-        //  
+        //
         //  1. A message to indicate which song.
         //
-        //  2. A message to indicate what line of the song to center on the 
+        //  2. A message to indicate what line of the song to center on the
         //     screen. Each lyric line is numbered. the lyric line is:
         //     pageNo * 128 + NoteOn.
         //---------------------------------------------------------------------
@@ -152,7 +160,7 @@
             if (msg.srcElement.name === app.device) {
                 var cmd = msg.data[0];
                 switch (cmd) {
-                case 144:  
+                case 144:
                     {
                         // *** LINE ***
                         // noteOn, note
@@ -180,13 +188,20 @@
                 case 192:
                     {
                         // *** SONG ***
-                        // program change:  1100nnnn  where nnnn = channel number. C000 is decimal 192
-                        // We use this as the Song Selector.  It is the index into our song array.
-                        app.song = msg.data[1] & 0x7F;
-                        feedbackMessage("songIndex",''+app.song);
-                        var lines = 0;
-                        if (app.song < app.songs.length) {
-                            feedbackMessage("lyricLines",''+app.songs[app.song].lyrics.length);
+                        // program change, programNo:
+                        // We use the programNo as the song id.  It is the index into our song array.
+                        var songID = (msg.data[1] & 0x7F);
+                        var found = false;
+                        for (var i = 0; i < app.songs.length; i++) {
+                            if (app.songs[i].id == songID) {
+                                found = true;
+                                app.song = i; // the index to the selected song
+                                updateSong(); // updates the interface
+                                break;
+                            }
+                        }
+                        if (!found) {
+                            feedbackMessage("unhandled",'Song ID ' + songID + ' was not found!');
                         }
                     }
                     break;
@@ -201,14 +216,15 @@
         }
 
         function onMIDIFailure() {
-            feedbackMessage("midiaccess","Could not access MIDI devices");
+            var s = '<span style="background-color: #ffe0e0;color: #aa2222;border-color:#aa2222;border-style:solid;border-width: 2px 2px 2px 2px;">&nbsp;MIDI not accessible&nbsp;</span>';
+            feedbackMessage("midiaccess",s);
         }
 
         function init() {
             navigator.requestMIDIAccess()
                 .then(onMIDISuccess, onMIDIFailure);
 
-            f("t","Wall of Love",7);
+            f("t","Wall of Love",7);  // external id 8, internal 7
             f("v","Did you hear that");
             f("v","Was it thunder");
             f("v","When you looked into my eyes");
@@ -254,54 +270,19 @@
 </head>
 
 <body>
-    <table border="1">
+    <table width="100%">
         <tr>
-            <td>Songs Found:</td>
-            <td id="songcount"></td>
+            <td id="midiaccess">MIDI</td>
+            <td>SONGS: <span id="songcount"></span></td>
+            <td><span id="song"></span></td>
         </tr>
         <tr>
-            <td>MIDI Access:</td>
-            <td><span id="midiaccess"></td>
-        </tr>
-        <tr>
-            <td>Lyric Line:</td>
-            <td>
-                <table>
-                    <tr>
-                        <td>Song:</td>
-                        <td><span id="song"></span> (<span id="songIndex"></span>)</td>
-                    </tr>
-                    <tr>
-                        <td>Page:</td>
-                        <td id="page"></td>
-                    </tr>
-                    <tr>
-                        <td>Line:</td>
-                        <td id="line"></td>
-                    </tr>
-                    <tr>
-                        <td>Index:</td>
-                        <td id="lyricIndex"></td>
-                    </tr>
-                </table>
-            </td>
-        </tr>
-        <tr>
-            <td>SONG Change</td>
-            <td>Song Index: <span id="songIndex"></span> &nbsp;&nbsp;Lyric Lines: <span id="lyricLines"></span> </td>
-        </tr>
-        <tr>
-            <td>Unhandled message:</td>
-            <td><span id="unhandled"></span>
-            </td>
-        <tr>
-            <td>Ignored message:</td>
-            <td>Device Name: <span id="ignoreName"></span> &nbsp;&nbsp;
-                data: <span id="ignoreData"></span>
-            </td>
+            <td colspan="3"><span id="unhandled">&nbsp;</span></td>
         </tr>
     </table>
-
+    <p></p>
+    <p></p>
+    <p></p>
     <p>
     <div id="lyric" style="font-size: 60pt;text-align: center;"></div>
     <br><br>
